# animus

./: .gitignore  CMakeLists.txt  Exploring Animus Project Documentation.md  README.md  implementation_plan.md
.github/workflows/: build.yml
src/: main.c
src/ai/: monster.c  monster.h  neural_net.c  neural_net.h  pathfinding.c  pathfinding.h  training.c  training.h
src/engine/: audio.c  audio.h  postfx.c  postfx.h  raycaster.c  raycaster.h  texgen.c  texgen.h
src/game/: deathcard.c  deathcard.h  items.c  items.h  narrative.c  narrative.h  options.c  options.h  panicroom.c  panicroom.h  player.c  player.h
src/world/: map.c  map.h  mapgen.c  mapgen.h
